--- a/src/styles.css
+++ b/src/styles.css
@@ -8,13 +8,14 @@ body{
     padding: 0;
     margin: 0;
     height: 100vh;
+    background-image: url('./img/pexels-brett-sayles-1431822.jpg');
 }
 .container{
     height: 100%;
     width: 100%;
     display: grid;
     grid-template-rows:2fr 12fr 1fr;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 2fr 3fr;
 }
 .header{
     background-color: skyblue;
@@ -67,6 +68,26 @@ button{
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 2rem;
+    font-size: 3rem;
     padding:2rem;
+}
+.forecast{
+    margin-top: auto;
+    padding: 1rem;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+}
+.forecastList{
+    display: flex;
+    font-size: 1rem;
+    justify-content: space-around;
+}
+.forecastCard{
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.164);
+    border-radius: 25px;
+    padding: 0.5rem;
 }
